[package]
name = "stillaxis"
version = "0.1.0"
authors = ["aedm <korteur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#vulkano = "0.19.0"
#vulkano-win = "0.19.0"
#winit = "0.22.2"
#strum = "0.19"
strum_macros = "0.19"